snapshots/care/data4life/hc-util-sdk-kmp/error/1.14.0-SNAPSHOT/error-1.14.0-20220831.180107-1.module.sha1
3499af2e0226f359a425ebecc8cb20c5df09e897